static-content/sparouter/css/styles.css
.bg {
    background-image: url('https://a.trellocdn.com/prgb/assets/8ab3b35f3a786bb6cdac.svg');
    background-size: cover;
    width: 100%;
    height: 100vh;
}

.logo {
    height: 40px;
    width: auto;
}

.boardBox-container {
    display: table;
    flex-wrap: wrap;
    align-self: center;
    justify-content: center;
    align-items: center;
    margin: auto;
    /*float: left;
    padding-left: 10em;*/
}

.boardBox-row {
    display: flex;
    margin-bottom: 3rem;
}

.boardBox {
    margin: 15px;
    padding: 20px;
    align-items: center;
    align-content: center;
    border: 15px groove white;
    width: fit-content;
}

.boardBox:hover {
    filter: brightness(50%);
}

.boardBox-title {
    color: white;
}

.boardBox-text {
    color: white;
    text-decoration: underline;
}

.clickable {
    cursor: pointer;
}

.rainbow-text {
    animation-name: rainbow;
    animation-duration: 5s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    animation-direction: alternate;
}

@keyframes rainbow {
    0% {
        color: #FF0000; /* red */
    }
    16.67% {
        color: #FF7F00; /* orange */
    }
    33.33% {
        color: #FFFF00; /* yellow */
    }
    50% {
        color: #00FF00; /* green */
    }
    66.67% {
        color: #0000FF; /* blue */
    }
    83.33% {
        color: #8B00FF; /* indigo */
    }
    100% {
        color: #FF00FF; /* violet */
    }
}

#mainContent {
    position: absolute;
    left: 0;
    width: 100%;
    background-color: rgb(42, 40, 40);
    overflow: auto;
}

.logo {
    animation-name: rotate;
    animation-duration: 5s;
    animation-iteration-count: infinite;
}

@keyframes rotate {
    0%, 70% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

.board {
    flex-wrap: nowrap;
    width: 100%;
    padding: 20px;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
    flex-direction: row;
    height: 600px;
}

.list-container {
    padding: 0 10px 10px;
    vertical-align: top;
    width: 250px;
    display: inline-block;
    margin-right: 10px;
    border-radius: 10px;
    height: fit-content;
    background-color: #ebecf0;
}

.list-container .newCard {
    display: flex;  /* displays button in middle */
}

.list-cards {
    max-height: calc(100vh - 300px);
    overflow-y: auto;
    padding: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
    box-sizing: border-box;
    border-radius: 10px;
}

.list-cards::-webkit-scrollbar {
    width: 8px;
}

.list-cards::-webkit-scrollbar-track {
    background-color: #f2f2f2;
}

.list-cards::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 4px;
}

.list-cards::-webkit-scrollbar-thumb:hover {
    background-color: #555;
}

#mainContent::-webkit-scrollbar {
    width: 10px;
}

#mainContent::-webkit-scrollbar-track {
    background-color: gray;
}

#mainContent::-webkit-scrollbar-thumb {
    background-color: #333333;
    border-radius: 4px;
}

#mainContent::-webkit-scrollbar-thumb:hover {
    background-color: #555;
}

.board::-webkit-scrollbar {
    height: 15px;
}

.board::-webkit-scrollbar-track {
    background: rgba(0, 0, 0, 0.2);
}

.board::-webkit-scrollbar-thumb {
    background-color: gray;
    border-radius: 5px;
}

.board::-webkit-scrollbar-thumb:hover {
    background-color: #555;
}

.list-header {
    padding-left: 10px;
    padding-top: 10px;
    color: #535353;
    font-family: Comic Sans Ms, serif
}

.card-container {
    border-radius: 10px;
    margin-bottom: 10px;
    box-shadow: 0 0 5px 0 rgba(0,0,0,0.3);
}

.card-container:hover {
    color: #333333;
}

.card-content {
    white-space: pre-line;
    word-wrap: break-word;
    flex: 1;
    height: auto;
    overflow: hidden;
    text-align: center;
}

.dragging {
    opacity: .4;
}

.create-list-button {
    transition: opacity 0.3s ease-in-out;
    opacity: 40%;
    border: transparent;
    border-radius: 1rem;
    width: 10rem;
    height: 3rem;
}

.create-list-button:hover {
    opacity: 70%;
}

.newCard {
    font-size: 14px;
    padding: 6px 12px;
    border-radius: 5rem;
    background-color: rgba(255, 255, 255, 0.7);
    color: #333;
    margin: auto auto 8px;
    max-width: 200px;
    transition: color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
}

.newCard:hover {
    color: gray;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.85);
}

.dropdown-item-user {
    pointer-events: none !important;
}

.dropdown-item-avatar {
    object-fit: cover;
    width : 30px;
    height : 30px;
    margin-right: 10px;
    margin-left: 5px;
    border-radius: 50%;
}

.dropdown-menu-user {
    display: inline-block;
    margin-left: 20px;
}

.avatar {
    margin-top: 2rem;
    object-fit: cover;
    width: 300px;
    height: 300px;
    border-radius: 50%;
}

.avatar:hover {
    filter: brightness(70%);
    opacity: 1;
}

.avatar-icon {
    padding: unset !important;
    object-fit: cover;
    width: 50px;
    height: 50px;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    border-radius: 50%;
}

.recent-boards {
    color: #D3D3D3;
    font-size: 20px;
    padding-left: 10rem;
    padding-top: 5rem;
}

.recent-rows {
    float: left;
    padding-left: 10em;
}

.board-desc {
    display: inline-block;
    width: 100%;
    height: 20px;
    line-height: 50px;
    vertical-align: middle;
    font-size: 20px;
    padding-left: 20px;
}

.error-header {
    color: #FF0000;
    font-size: 5rem;
}

.bg-error {
    background-image: url("https://i.imgur.com/6DdhZTP.gif");
    opacity: 0.5;
    background-position: center top;
    width: 100vw;
    height: 50vh;
}

.hide {
    display: none;
    text-align: center;
    position: center;
}

.dropdown-archived {
    position: absolute;
    right: 5px;
    top: -30px;
}

.dropdown-users {
    position: absolute;
    left: 1050px;
    top: -25px;
}

